external-crates/move/crates/move-compiler/tests/move_check/parser/struct_without_fields.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_without_fields.move:3:13
  │
3 │     struct S;
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected '{'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_without_fields.move:3:13
  │
3 │     struct S;
  │             ^
  │             │
  │             Unexpected ';'
  │             Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'

